--- a/static/projects.html
+++ b/static/projects.html
@@ -217,6 +217,17 @@
             color: #dc2626;
         }
 
+        .project-btn.chat {
+            background: linear-gradient(135deg, #3b82f6 0%, #2563eb 100%);
+            color: white;
+        }
+
+        .project-btn.chat:hover {
+            background: linear-gradient(135deg, #2563eb 0%, #1d4ed8 100%);
+            transform: translateY(-1px);
+            color: white;
+        }
+
         .empty-state {
             text-align: center;
             padding: 4rem 2rem;
