--- a/static/editor.html
+++ b/static/editor.html
@@ -213,9 +213,163 @@
             30% { opacity: 1; transform: scale(1); }
         }
 
+        /* Стили для размышлений LLM */
+        .llm-thinking-container {
+            display: flex;
+            flex-direction: column;
+            gap: 0.5rem;
+        }
+
+        .thinking-current {
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            padding: 0.75rem;
+            border-radius: 0.5rem;
+            background: rgba(34, 197, 94, 0.1);
+            border: 1px solid rgba(34, 197, 94, 0.2);
+            animation: thinkingGlow 2s infinite;
+        }
+
+        .thinking-history {
+            display: flex;
+            flex-direction: column;
+            gap: 0.25rem;
+            max-height: 200px;
+            overflow-y: auto;
+        }
+
+        .thinking-item {
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            padding: 0.5rem;
+            border-radius: 0.375rem;
+            background: rgba(34, 197, 94, 0.05);
+            border: 1px solid rgba(34, 197, 94, 0.1);
+            opacity: 0.8;
+            font-size: 0.85rem;
+            animation: thinkingFadeIn 0.5s ease-out;
+        }
+
+        .thinking-icon {
+            font-size: 1.1rem;
+            animation: thinkingPulse 2s infinite;
+        }
+
+        .thinking-text {
+            font-size: 0.9rem;
+            color: #374151;
+            font-weight: 500;
+            line-height: 1.4;
+        }
+
+        .thinking-current .thinking-text {
+            color: #16a34a;
+            font-weight: 600;
+        }
+
+        @keyframes thinkingGlow {
+            0%, 100% { 
+                box-shadow: 0 0 0 rgba(34, 197, 94, 0.3);
+            }
+            50% { 
+                box-shadow: 0 0 10px rgba(34, 197, 94, 0.3);
+            }
+        }
+
+        @keyframes thinkingPulse {
+            0%, 100% { opacity: 0.8; transform: scale(1); }
+            50% { opacity: 1; transform: scale(1.05); }
+        }
+
+        @keyframes thinkingFadeIn {
+            from { 
+                opacity: 0; 
+                transform: translateY(10px); 
+            }
+            to { 
+                opacity: 0.8; 
+                transform: translateY(0); 
+            }
+        }
+
         @keyframes fadeIn {
             from { opacity: 0; transform: translateY(10px); }
             to { opacity: 1; transform: translateY(0); }
+        }
+
+        /* Mode Selector Styles */
+        .mode-selector {
+            border-top: 1px solid rgba(34, 197, 94, 0.1);
+            padding: 0.75rem 1rem;
+            background: #fafffa;
+        }
+
+        .mode-selector-container {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+
+        .mode-buttons {
+            display: flex;
+            background: rgba(34, 197, 94, 0.1);
+            border-radius: 8px;
+            padding: 2px;
+            gap: 2px;
+        }
+
+        .mode-btn {
+            padding: 0.5rem 1rem;
+            border: none;
+            border-radius: 6px;
+            background: transparent;
+            color: #6b7280;
+            font-size: 0.875rem;
+            font-weight: 500;
+            cursor: pointer;
+            transition: all 0.2s ease;
+            min-width: 60px;
+        }
+
+        .mode-btn:hover {
+            color: #374151;
+        }
+
+        .mode-btn.active {
+            background: white;
+            color: #22c55e;
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+        }
+
+        /* Two-Stage Toggle Styles */
+        .two-stage-toggle {
+            display: flex;
+            align-items: center;
+        }
+
+        .toggle-label {
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            cursor: pointer;
+            font-size: 0.875rem;
+            color: #374151;
+            user-select: none;
+        }
+
+        .toggle-label input[type="checkbox"] {
+            width: 18px;
+            height: 18px;
+            accent-color: #22c55e;
+            cursor: pointer;
+        }
+
+        .toggle-text {
+            font-weight: 500;
         }
 
         .chat-input-area {
@@ -235,31 +389,40 @@
             min-height: 44px;
             max-height: 120px;
             padding: 0.75rem 1rem;
-            border: 2px solid rgba(34, 197, 94, 0.2);
-            border-radius: 22px;
+            border: 1px solid rgba(34, 197, 94, 0.2);
+            border-radius: 12px;
             font-family: 'Inter', sans-serif;
             font-size: 0.925rem;
             line-height: 1.4;
             resize: none;
             background: white;
             transition: all 0.3s ease;
+            overflow: hidden;
+        }
+
+        .chat-input::-webkit-scrollbar {
+            display: none;
+        }
+
+        .chat-input {
+            -ms-overflow-style: none;
+            scrollbar-width: none;
         }
 
         .chat-input:focus {
             outline: none;
             border-color: #22c55e;
-            box-shadow: 0 0 0 3px rgba(34, 197, 94, 0.1);
         }
 
         .send-chat-btn {
-            width: 44px;
-            height: 44px;
+            width: 36px;
+            height: 36px;
             border: none;
-            border-radius: 50%;
-            background: linear-gradient(135deg, #22c55e 0%, #16a34a 100%);
+            border-radius: 6px;
+            background: #22c55e;
             color: white;
             cursor: pointer;
-            transition: all 0.3s ease;
+            transition: all 0.15s ease;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -267,15 +430,25 @@
         }
 
         .send-chat-btn:hover:not(:disabled) {
-            background: linear-gradient(135deg, #16a34a 0%, #15803d 100%);
-            transform: translateY(-2px);
-            box-shadow: 0 6px 20px rgba(34, 197, 94, 0.3);
+            background: #16a34a;
+        }
+
+        .send-chat-btn:active:not(:disabled) {
+            transform: scale(0.96);
         }
 
         .send-chat-btn:disabled {
-            opacity: 0.4;
+            background: #e5e7eb;
+            color: #9ca3af;
             cursor: not-allowed;
-            transform: none;
+        }
+
+        .send-chat-btn svg {
+            transition: transform 0.15s ease;
+        }
+
+        .send-chat-btn:hover:not(:disabled) svg {
+            transform: translateX(1px);
         }
 
         .loading-spinner {
@@ -372,6 +545,7 @@
             margin-bottom: 0.5rem;
             display: -webkit-box;
             -webkit-line-clamp: 2;
+            line-clamp: 2;
             -webkit-box-orient: vertical;
             overflow: hidden;
         }
@@ -965,7 +1139,7 @@
                     <!-- Область сообщений -->
                     <div id="chat-messages" class="chat-messages-area">
                         <div class="welcome-chat-message">
-                            <div class="chat-avatar">🤖</div>
+                            <div class="chat-avatar"></div>
                             <div class="chat-bubble ai-bubble">
                                 <div class="chat-text">
                                     Привет! Я помощник для создания современных веб-приложений на Next.js. Просто опишите, какой проект вы хотите создать, и я сгенерирую полноценное приложение с TypeScript и Tailwind CSS!
@@ -987,22 +1161,36 @@
                         </div>
                     </div>
 
-                    <!-- Индикатор печати -->
+                    <!-- Индикатор размышлений LLM -->
                     <div id="typing-indicator" class="typing-indicator hidden">
-                        <div class="chat-avatar">🤖</div>
+                        <div class="chat-avatar"></div>
                         <div class="typing-bubble">
-                            <div class="typing-text">
-                                <span class="typing-char">W</span>
-                                <span class="typing-char">i</span>
-                                <span class="typing-char">n</span>
-                                <span class="typing-char">d</span>
-                                <span class="typing-char">e</span>
-                                <span class="typing-char">x</span>
-                                <span class="typing-char">A</span>
-                                <span class="typing-char">I</span>
-                                <span class="typing-char">.</span>
-                                <span class="typing-char">.</span>
-                                <span class="typing-char">.</span>
+                            <div class="llm-thinking-container">
+                                <div class="thinking-current">
+                                    <div class="thinking-icon">💭</div>
+                                    <div class="thinking-text">Начинаю анализ...</div>
+                                </div>
+                                <div class="thinking-history"></div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Mode Selector -->
+                    <div class="mode-selector">
+                        <div class="mode-selector-container">
+                            <div class="mode-buttons">
+                                <button id="lite-mode-btn" class="mode-btn active" data-mode="lite">
+                                    Lite
+                                </button>
+                                <button id="pro-mode-btn" class="mode-btn" data-mode="pro">
+                                    Pro
+                                </button>
+                            </div>
+                            <div class="two-stage-toggle">
+                                <label class="toggle-label">
+                                    <input type="checkbox" id="two-stage-toggle" checked>
+                                    <span class="toggle-text">Two-Stage LLM</span>
+                                </label>
                             </div>
                         </div>
                     </div>
@@ -1017,7 +1205,10 @@
                                 rows="1"
                             ></textarea>
                             <button id="send-chat-btn" class="send-chat-btn" disabled>
-                                <span id="send-btn-text">📤</span>
+                                <svg id="send-btn-icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <line x1="22" y1="2" x2="11" y2="13"></line>
+                                    <polygon points="22,2 15,22 11,13 2,9 22,2"></polygon>
+                                </svg>
                                 <div id="send-loading-spinner" class="loading-spinner" style="display: none;"></div>
                             </button>
                         </div>
@@ -1047,6 +1238,9 @@
                     <div class="d-flex align-items-center justify-content-between">
                         <h2 class="panel-title"></h2>
                         <div class="d-flex gap-2">
+                            <button id="restore-content-btn" class="btn btn-outline btn-sm" title="Восстановить контент" style="display: none;">
+                                🔄 Восстановить
+                            </button>
                             <button id="edit-mode-btn" class="btn btn-outline btn-sm" title="Режим редактирования">
                                 Редактировать
                             </button>
@@ -1063,13 +1257,121 @@
                     </div>
                 </div>
                 <div class="panel-content" style="padding: 0;">
-                    <iframe id="preview" class="preview-iframe" srcdoc="
-                        <div style='display: flex; align-items: center; justify-content: center; height: 100vh; font-family: Inter, sans-serif; color: #6b7280;'>
-                            <div style='text-align: center;'>
-                                <h2 style='margin: 0 0 1rem 0;'>🌟 AI-Редактор сайтов</h2>
-                                <p style='margin: 0;'>Опишите ваш сайт и нажмите кнопку генерации</p>
+                    <iframe id="preview" class="preview-iframe" sandbox="allow-scripts allow-same-origin allow-forms allow-popups allow-popups-to-escape-sandbox" loading="lazy" srcdoc="
+                        <!DOCTYPE html>
+                        <html lang='ru'>
+                        <head>
+                            <meta charset='UTF-8'>
+                            <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+                            <title>WindexsAI - Искусственный интеллект нового поколения</title>
+                            <style>
+                                body {
+                                    margin: 0;
+                                    font-family: 'Inter', sans-serif;
+                                    background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+                                    color: white;
+                                    display: flex;
+                                    align-items: center;
+                                    justify-content: center;
+                                    height: 100vh;
+                                    text-align: center;
+                                }
+                                .container {
+                                    max-width: 600px;
+                                    padding: 2rem;
+                                }
+                                .logo {
+                                    font-size: 3rem;
+                                    font-weight: 700;
+                                    margin-bottom: 1rem;
+                                    background: linear-gradient(45deg, #ff6b6b, #4ecdc4);
+                                    -webkit-background-clip: text;
+                                    -webkit-text-fill-color: transparent;
+                                    background-clip: text;
+                                }
+                                .subtitle {
+                                    font-size: 1.2rem;
+                                    margin-bottom: 2rem;
+                                    opacity: 0.9;
+                                }
+                                .description {
+                                    font-size: 1rem;
+                                    line-height: 1.6;
+                                    opacity: 0.8;
+                                    margin-bottom: 2rem;
+                                }
+                                .features {
+                                    display: grid;
+                                    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+                                    gap: 1rem;
+                                    margin-top: 2rem;
+                                }
+                                .feature {
+                                    background: rgba(255, 255, 255, 0.1);
+                                    padding: 1rem;
+                                    border-radius: 10px;
+                                    backdrop-filter: blur(10px);
+                                }
+                                .feature-icon {
+                                    font-size: 2rem;
+                                    margin-bottom: 0.5rem;
+                                }
+                                .feature-title {
+                                    font-weight: 600;
+                                    margin-bottom: 0.5rem;
+                                }
+                                .feature-desc {
+                                    font-size: 0.9rem;
+                                    opacity: 0.8;
+                                }
+                            </style>
+                            <script>
+                                // Предотвращаем дублирование при навигации
+                                let navigationPrevented = false;
+                                window.addEventListener('beforeunload', function(e) {
+                                    if (!navigationPrevented) {
+                                        navigationPrevented = true;
+                                        console.log('🔄 Предотвращаем дублирование навигации');
+                                    }
+                                });
+                                
+                                // Блокируем множественные загрузки
+                                if (window.iframeLoaded) {
+                                    console.log('⚠️ Iframe уже загружен, предотвращаем дублирование');
+                                } else {
+                                    window.iframeLoaded = true;
+                                    console.log('✅ Iframe загружен впервые');
+                                }
+                            </script>
+                        </head>
+                        <body data-iframe='true'>
+                            <div class='container'>
+                                <div class='logo'>WindexsAI</div>
+                                <div class='subtitle'>Искусственный интеллект нового поколения</div>
+                                <div class='description'>
+                                    Добро пожаловать в будущее AI-технологий. Создавайте сайты, анализируйте данные, 
+                                    генерируйте контент и решайте сложные задачи с помощью передового искусственного интеллекта.
+                                </div>
+                                <div class='features'>
+                                    <div class='feature'>
+                                        <div class='feature-icon'>🌐</div>
+                                        <div class='feature-title'>Создание сайтов</div>
+                                        <div class='feature-desc'>Генерируйте современные веб-сайты с помощью AI</div>
+                                    </div>
+                                    <div class='feature'>
+                                        <div class='feature-icon'>💬</div>
+                                        <div class='feature-title'>Умный чат</div>
+                                        <div class='feature-desc'>Общайтесь с AI-ассистентами разных специализаций</div>
+                                    </div>
+                                    <div class='feature'>
+                                        <div class='feature-icon'>📊</div>
+                                        <div class='feature-title'>Анализ данных</div>
+                                        <div class='feature-desc'>Обрабатывайте и анализируйте информацию</div>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
+                        </body>
+                        </html>
                     "></iframe>
                 </div>
                 <div class="status-bar">
