--- a/static/index.html
+++ b/static/index.html
@@ -7,6 +7,8 @@
     <link rel="icon" href="/static/favicon.ico">
     <link rel="stylesheet" href="/static/style.css?v=20251027-01">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <!-- KaTeX CSS для математических формул -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css">
 </head>
 <body>
     <div class="app">
@@ -86,8 +88,8 @@
 
                 <nav class="header-nav">
                     <div class="nav-links">
-                        <a href="/editor" class="nav-link">Создание сайтов</a>
-                        <a href="/dashboard" class="nav-link">Кабинет</a>
+                        <!-- <a href="/editor" class="nav-link">Создание сайтов</a> -->
+                        <!-- <a href="/dashboard" class="nav-link">Кабинет</a> -->
                     </div>
                 </nav>
 
@@ -302,7 +304,7 @@
                                 class="form-input flex-grow-1"
                                 placeholder="Введите ваше сообщение..."
                                 rows="1"
-                                maxlength="4000"
+                                maxlength="12000"
                             ></textarea>
                             <input type="file" id="document-input" accept=".pdf,.docx,.doc,.txt,.csv,.rtf,.jpg,.jpeg,.png,.gif,.bmp,.tiff" style="display: none;">
                             
@@ -332,15 +334,15 @@
                                     <line x1="8" y1="22" x2="16" y2="22"></line>
                                 </svg>
                             </button>
-                            <button id="send-btn" class="btn btn-primary" disabled>
-                                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <button id="send-btn" class="btn btn-primary btn-sm" disabled>
+                                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                     <line x1="22" y1="2" x2="11" y2="13"></line>
                                     <polygon points="22,2 15,22 11,13 2,9 22,2"></polygon>
                                 </svg>
                             </button>
                         </div>
                         <div class="input-footer d-flex justify-content-between align-items-center mt-2">
-                            <span class="char-count text-muted">0/4000</span>
+                            <span class="char-count text-muted">0/12000</span>
                         </div>
                     </div>
                 </div>
@@ -494,8 +496,12 @@
       </div>
     </div>
 
-    <script src="/static/script.js?v=20251027-08"></script>
+    <script src="/static/script.js?v=20251027-14"></script>
     <script src="/static/cloud-api.js"></script>
+
+    <!-- KaTeX для математических формул -->
+    <script src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/contrib/auto-render.min.js"></script>
 
     <!-- Mermaid.js для диаграмм -->
     <script type="module">
@@ -574,6 +580,43 @@
             childList: true,
             subtree: true
         });
+    </script>
+
+    <!-- KaTeX авто-рендеринг математических выражений -->
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            renderMathInElement(document.body, {
+                delimiters: [
+                    {left: "$$", right: "$$", display: true},
+                    {left: "$", right: "$", display: false},
+                    {left: "\\[", right: "\\]", display: true},
+                    {left: "\\(", right: "\\)", display: false}
+                ],
+                throwOnError: false,
+                errorColor: '#cc0000',
+                strict: 'warn',
+                trust: true
+            });
+        });
+
+        // Функция для повторного рендеринга после добавления новых сообщений
+        function renderMathInChat() {
+            const chatMessages = document.getElementById('chat-messages');
+            if (chatMessages && typeof renderMathInElement !== 'undefined') {
+                renderMathInElement(chatMessages, {
+                    delimiters: [
+                        {left: "$$", right: "$$", display: true},
+                        {left: "$", right: "$", display: false},
+                        {left: "\\[", right: "\\]", display: true},
+                        {left: "\\(", right: "\\)", display: false}
+                    ],
+                    throwOnError: false,
+                    errorColor: '#cc0000',
+                    strict: 'warn',
+                    trust: true
+                });
+            }
+        }
     </script>
 </body>
 </html>
