--- a/static/pricing.html
+++ b/static/pricing.html
@@ -5,9 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Тарифы WindexsAI - Выберите подходящий план</title>
     <link rel="icon" href="/static/favicon.ico">
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="/static/style.css?v=20251027-12">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <style>
+        /* Специальные стили для pricing страницы */
+        html, body {
+            overflow: auto !important;
+            height: auto !important;
+        }
+        .pricing-page {
+            overflow-y: auto !important;
+            height: auto !important;
+            min-height: 100vh;
+        }
+    </style>
 </head>
 <body>
     <div class="pricing-page">
@@ -189,9 +201,9 @@
                         // Обновляем статус на странице
                         updateSubscriptionStatus(result.plan, result.expires_at);
                         
-                        // Перенаправляем на главную страницу через 2 секунды
+                        // Перенаправляем на главную страницу через 2 секунды с параметром обновления
                         setTimeout(() => {
-                            window.location.href = '/';
+                            window.location.href = '/?subscription_activated=pro';
                         }, 2000);
                         
                     } else {
