feat: remove profile functionality completely - delete profile.html, profile.js, profile router and related code

--- a/static/index.html
+++ b/static/index.html
@@ -2,13 +2,10 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WindexsAI - Искусственный интеллект нового поколения</title>
     <link rel="icon" href="/static/favicon.ico">
-    <link rel="stylesheet" href="/static/style.css?v=20251031-06">
+    <link rel="stylesheet" href="/static/style.css?v=20251027-01">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <!-- KaTeX CSS для математических формул -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css">
@@ -364,22 +361,6 @@
         </div>
     </div>
 
-    <div id="profile-modal" class="profile-modal hidden">
-        <div class="profile-modal-content card">
-            <div class="card-header">
-                <div class="d-flex align-items-center justify-content-between">
-                    <h2 class="mb-0">Личный кабинет</h2>
-                    <button class="close-profile btn btn-outline" title="Закрыть">×</button>
-                </div>
-            </div>
-            <div class="card-body">
-                <div class="profile-info">
-                    <p class="mb-3"><strong>Имя пользователя:</strong> <span id="profile-username" class="text-primary"></span></p>
-                    <p class="mb-0"><strong>Email:</strong> <span id="profile-email" class="text-primary"></span></p>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <!-- Connect Modal -->
     <div id="connect-modal" class="connect-modal hidden">
@@ -499,7 +480,7 @@
       </div>
     </div>
 
-    <script src="/static/script.js?v=20251031-02"></script>
+    <script src="/static/script.js?v=20251027-14"></script>
     <script src="/static/cloud-api.js"></script>
 
     <!-- KaTeX для математических формул -->
