--- a/static/index.html
+++ b/static/index.html
@@ -311,7 +311,14 @@
                             <!-- Кнопка с выдвижным меню -->
                             <div class="dropdown-menu-container" style="position: relative !important; display: inline-block !important;">
                                 <button id="tools-btn" class="btn btn-outline" title="Инструменты" style="position: relative; z-index: 100;">
-                                    Инструменты
+                                    <span class="tools-text">Инструменты</span>
+                                    <span class="tools-icon">
+                                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                            <path d="M14.7 6.3a1 1 0 0 0-1.4 0L10 9.58 8.7 8.3a1 1 0 0 0-1.4 0 1 1 0 0 0 0 1.4l2 2a1 1 0 0 0 1.4 0l4-4a1 1 0 0 0 0-1.4Z"></path>
+                                            <path d="M14.7 12.3a1 1 0 0 0-1.4 0L10 15.58 8.7 14.3a1 1 0 0 0-1.4 0 1 1 0 0 0 0 1.4l2 2a1 1 0 0 0 1.4 0l4-4a1 1 0 0 0 0-1.4Z"></path>
+                                            <path d="M20 4v16a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2Z"></path>
+                                        </svg>
+                                    </span>
                                 </button>
 
                                 <div id="tools-dropdown" class="tools-dropdown">
